Setup CI publish

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "eslint-config-jvalue",
+  "name": "@jvalue/eslint-config-jvalue",
   "keywords": [
     "eslint",
     "eslint-config"
