--- a/package.json
+++ b/package.json
@@ -12,23 +12,15 @@
   "bugs": {
     "url": "https://github.com/jvalue/eslint-config-jvalue/issues"
   },
-  "main": "index.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/jvalue/eslint-config-jvalue.git"
   },
+  "main": "index.js",
+  "scripts": {
+    "lint": "prettier --check **/*.{js,json,md,yml}"
+  },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^4.28.4",
-    "@typescript-eslint/parser": "^4.28.4",
-    "@vue/eslint-config-prettier": "^6.0.0",
-    "@vue/eslint-config-typescript": "^7.0.0",
-    "eslint": "^7.31.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-import": "^2.23.4",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^3.4.0",
-    "eslint-plugin-promise": "^5.1.0",
-    "eslint-plugin-vue": "^7.16.0",
-    "prettier": "^2.3.2"
+    "prettier": "^2.6.2"
   }
 }
