--- a/.github/workflows/eslint-release.yml
+++ b/.github/workflows/eslint-release.yml
@@ -5,7 +5,7 @@ on:
     types: [created]
 
 jobs:
-  publish:
+  publish-npmjs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -22,3 +22,21 @@ jobs:
         run: npm publish --access public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+          
+  publish-npmgh:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      # Note: Currently only publishing to NPM since GitHub does not allow unauthenticated access to public packages!
+      - name: Setup node
+        uses: actions/setup-node@v1
+        with:
+          node-version: '16'
+          registry-url: 'https://npm.pkg.github.com'
+      - name: Install dependencies
+        run: npm ci
+      - name: Publish to NPMjs Packages
+        run: npm publish --access public
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
